attempting to fix an issue with the footer on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -24,5 +24,7 @@
 }
 
 .footer-row {
+  height: 10%;
   justify-content: center;
+  align-items: center;
 }
